--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,11 +26,11 @@ dist.jar=${dist.dir}/ChestRestock.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.bukkit-0.0.1-SNAPSHOT.jar=lib\\bukkit-0.0.1-SNAPSHOT.jar
+file.reference.bukkit-754.jar-1=lib\\Bukkit\\bukkit-754.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.bukkit-0.0.1-SNAPSHOT.jar}
+    ${file.reference.bukkit-754.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -69,5 +69,5 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-source.reference.bukkit-0.0.1-SNAPSHOT.jar=lib/Bukkit-Bukkit-0.0.0-639-g35574b8.zip!/Bukkit-Bukkit-35574b8/src/main/java/
+source.reference.bukkit-754.jar-1=lib/Bukkit/Bukkit-Bukkit-0.0.0-643-gb7fdcb7.zip!/Bukkit-Bukkit-b7fdcb7/src/main/java/
 src.dir=src
