--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,7 +2,7 @@ annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=ChestRestock
+application.title=dChest
 application.vendor=Roton
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -22,15 +22,17 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ChestRestock.jar
+dist.jar=${dist.dir}/dChest.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.bukkit-754.jar-1=lib\\Bukkit\\bukkit-754.jar
+file.reference.BukkitContrib.jar=lib\\BukkitContrib\\BukkitContrib.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.bukkit-754.jar-1}
+    ${file.reference.bukkit-754.jar-1}:\
+    ${file.reference.BukkitContrib.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -70,4 +72,5 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 source.reference.bukkit-754.jar-1=lib/Bukkit/Bukkit-Bukkit-0.0.0-643-gb7fdcb7.zip!/Bukkit-Bukkit-b7fdcb7/src/main/java/
+source.reference.BukkitContrib.jar=lib/BukkitContrib/Afforess-BukkitContrib-8b310ca.zip!/Afforess-BukkitContrib-8b310ca/src/
 src.dir=src
