--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,14 +1,14 @@
-name: ChestRestock
-main: com.dumptruckman.chestrestock.ChestRestock
-version: 1.1
+name: dChest
+main: com.dumptruckman.dchest.DChest
+version: 2.0
 author: dumptruckman
 
 commands:
-  chestrestock:
+  dchest:
     description: Views/sets/changes the settings of the chest you are targetting.
     usage: |
            /<command> <subcommand>
            Subcommands: help, check, set, period, update, periodmode, 
            restockmode, preserveslots, indestructible, disable, reload,
            playerlimit, restock, name
-    aliases: cr
+    aliases: dc
