--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,11 +28,13 @@ endorsed.classpath=
 excludes=
 file.reference.bukkit-754.jar-1=lib\\Bukkit\\bukkit-754.jar
 file.reference.BukkitContrib.jar=lib\\BukkitContrib\\BukkitContrib.jar
+file.reference.dUtil.jar=lib\\dUtil\\dUtil.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.bukkit-754.jar-1}:\
-    ${file.reference.BukkitContrib.jar}
+    ${file.reference.BukkitContrib.jar}:\
+    ${file.reference.dUtil.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
