--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Roton\\.netbeans\\6.9\\build.properties
+user.properties.file=C:\\Users\\Billing Manager\\.netbeans\\7.0\\build.properties
