--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -2,6 +2,7 @@ name: dChest
 main: com.dumptruckman.dchest.DChest
 version: 2.0
 author: dumptruckman
+softdepend: [Permissions]
 
 commands:
   dchest:
