updated to new(now old) permissions

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,17 +26,15 @@ dist.jar=${dist.dir}/dChest.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.bukkit-754.jar-1=lib\\Bukkit\\bukkit-754.jar
-file.reference.BukkitContrib.jar=lib\\BukkitContrib\\BukkitContrib.jar
-file.reference.craftbukkit-953.jar=lib\\CraftBukkit\\craftbukkit-953.jar
+file.reference.craftbukkit-0.0.1-SNAPSHOT.jar=lib\\craftbukkit-0.0.1-SNAPSHOT.jar
 file.reference.dUtil.jar=lib\\dUtil\\dUtil.jar
+file.reference.Spout.jar=lib\\Spout.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.bukkit-754.jar-1}:\
-    ${file.reference.BukkitContrib.jar}:\
     ${file.reference.dUtil.jar}:\
-    ${file.reference.craftbukkit-953.jar}
+    ${file.reference.Spout.jar}:\
+    ${file.reference.craftbukkit-0.0.1-SNAPSHOT.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -75,6 +73,4 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-source.reference.bukkit-754.jar-1=lib/Bukkit/Bukkit-Bukkit-0.0.0-643-gb7fdcb7.zip!/Bukkit-Bukkit-b7fdcb7/src/main/java/
-source.reference.BukkitContrib.jar=lib/BukkitContrib/Afforess-BukkitContrib-8b310ca.zip!/Afforess-BukkitContrib-8b310ca/src/
 src.dir=src
