--- a/pom.xml
+++ b/pom.xml
@@ -141,12 +141,15 @@ and adjust the build number accordingly -->
                             <artifactSet>
                                 <includes>
                                     <include>com.pneumaticraft.commandhandler:CommandHandler</include>
+                                    <include>com.dumptruckman:ActionMenu2</include>
                                 </includes>
                             </artifactSet>
                             <relocations>
                                 <relocation>
                                     <pattern>com.pneumaticraft.commandhandler</pattern>
                                     <shadedPattern>com.pneumaticraft.commandhandler.chestrestock</shadedPattern>
+                                    <pattern>com.dumptruckman.actionmenu2</pattern>
+                                    <shadedPattern>com.dumptruckman.actionmenu2.chestrestock</shadedPattern>
                                 </relocation>
                             </relocations>
                         </configuration>
@@ -174,6 +177,15 @@ and adjust the build number accordingly -->
             <scope>compile</scope>
         </dependency>
         <!-- End of CommandHandler Dependency -->
+        <!-- Start of ActionMenu2 Dependency -->
+        <dependency>
+            <groupId>com.dumptruckman</groupId>
+            <artifactId>ActionMenu2</artifactId>
+            <version>dev-SNAPSHOT</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <!-- End of ActionMenu2 Dependency -->
         <!-- Start of Test Dependencies -->
         <dependency>
             <groupId>junit</groupId>
