--- a/pom.xml
+++ b/pom.xml
@@ -163,16 +163,16 @@ and adjust the build number accordingly -->
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.1-R5-SNAPSHOT</version>
+            <version>1.2.3-R0.2-SNAPSHOT</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
         <!-- Bukkit Dependency -->
         <!-- Start of CommandHandler Dependency -->
         <dependency>
-            <groupId>com.pneumaticraft.commandhandler</groupId>
-            <artifactId>CommandHandler</artifactId>
-            <version>6</version>
+            <groupId>com.dumptruckman.minecraft</groupId>
+            <artifactId>BukkitPlugin</artifactId>
+            <version>1.1-SNAPSHOT</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
