--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
-name: dChest
-main: com.dumptruckman.dchest.DChest
+name: ChestRestock
+main: com.dumptruckman.chestrestock.ChestRestockPlugin
 version: 2.0
 author: dumptruckman
 
