Fixed a bunch of bugs.  Releasing as 2.0-beta.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,14 +1,9 @@
 name: ChestRestock
 main: com.dumptruckman.chestrestock.ChestRestockPlugin
-version: 2.0
+version: 2.0-beta
 author: dumptruckman
 
 commands:
-  dchest:
+  cr:
     description: Views/sets/changes the settings of the chest you are targetting.
-    usage: |
-           /<command> <subcommand>
-           Subcommands: help, check, set, period, update, periodmode, 
-           restockmode, preserveslots, indestructible, disable, reload,
-           playerlimit, restock, name
-    aliases: dc
+    usage: /<command>
