--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: ChestRestock
 main: com.dumptruckman.chestrestock.ChestRestockPlugin
-version: 2.0.2-beta
+version: 2.0
 author: dumptruckman
 
 commands:
