Updated for deployment on onarandombox jenkins.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: ChestRestock
 main: com.dumptruckman.chestrestock.ChestRestockPlugin
-version: 2.2.1
+version: maven-version-number
 author: dumptruckman
 
 commands:
