--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.dumptruckman</groupId>
     <artifactId>ChestRestock</artifactId>
-    <version>2.2.1</version>
+    <version>2.2</version>
     <name>ChestRestock</name>
     <description>Chest Restocking plugin</description>
     <properties>
@@ -214,10 +214,10 @@ and adjust the build number accordingly -->
         <!-- End of Test Dependencies -->
     </dependencies>
 
-    <!--<distributionManagement>
+    <distributionManagement>
         <repository>
             <id>OnARandomBox</id>
-            <url>http://repo.onarandombox.com/content/repositories/multiverse</url>
+            <url>http://repo.onarandombox.com/content/repositories/thirdparty/</url>
         </repository>
-    </distributionManagement>-->
+    </distributionManagement>
 </project>
