Possibly fix jenkins issue?

--- a/pom.xml
+++ b/pom.xml
@@ -219,5 +219,9 @@ and adjust the build number accordingly -->
             <id>OnARandomBox</id>
             <url>http://repo.onarandombox.com/content/repositories/thirdparty/</url>
         </repository>
+        <snapshotRepository>
+            <id>OnARandomBox</id>
+            <url>http://repo.onarandombox.com/content/repositories/thirdparty-dev/</url>
+        </snapshotRepository>
     </distributionManagement>
 </project>
