--- a/src/main/resources/loot_example.yml
+++ b/src/main/resources/loot_example.yml
@@ -1,6 +1,6 @@
 # In this example, when the chest using loot_table 'justaname' restocks, there is a guaranteed diamond pickaxe with silk touch enchant,
-# there is a 50% chance for a either a diamond or iron sword with up to 2 enchants, sharpness I-V, knockback I, or fire aspect II
-# and a 10% chance of a 20 stack of mossy stone blocks.
+# there is a 50% chance for: either a diamond/iron sword with up to 2 enchants (sharpness I-V, knockback I, or fire aspect II) OR a wood sword with silk touch,
+# and a 10% chance for: a 20 stack of mossy stone blocks.
 # Further, '2' is rolled 10 times, with a 10% chance of EITHER 1 diamond or 5 gold, but not both.
 # An additional note, the numbers used as headings can be any number or word as long as they are not the key words
 # such as chance, id, amount, data and rolls.  They should be unique headings though as if they are the same, errors may occur.
@@ -15,6 +15,11 @@ justaname:
       id: 276
     2:
       id: 267
+    3:
+      id: 268
+      enchant:
+        safe: false
+        name: silk_touch
     enchant:
       rolls: 2
       split: true
