Added ability to restock all chests in worlds which are reset by Multiverse-Adventure.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: ChestRestock
 main: com.dumptruckman.chestrestock.ChestRestockPlugin
 version: maven-version-number
 author: dumptruckman
+softdepend: [Multiverse-Adventure]
 
 commands:
   cr:
