--- a/pom.xml
+++ b/pom.xml
@@ -169,7 +169,7 @@ and adjust the build number accordingly -->
             <scope>compile</scope>
         </dependency>
         <!-- Bukkit Dependency -->
-        <!-- Start of CommandHandler Dependency -->
+        <!-- Start of PluginBase Dependency -->
         <dependency>
             <groupId>com.dumptruckman.minecraft</groupId>
             <artifactId>BukkitPlugin</artifactId>
@@ -177,7 +177,16 @@ and adjust the build number accordingly -->
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
-        <!-- End of CommandHandler Dependency -->
+        <!-- End of PluginBase Dependency -->
+        <!-- Start of Multiverse-Adventure Dependency -->
+        <dependency>
+            <groupId>com.onarandombox.multiverseadventure</groupId>
+            <artifactId>Multiverse-Adventure</artifactId>
+            <version>2.4</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <!-- End of Multiverse-Adventure Dependency -->
         <!-- Start of Test Dependencies -->
         <dependency>
             <groupId>junit</groupId>
