--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.dumptruckman.minecraft</groupId>
     <artifactId>ChestRestock</artifactId>
-    <version>2.3-SNAPSHOT</version>
+    <version>2.3</version>
     <name>ChestRestock</name>
     <description>Chest Restocking plugin</description>
     <properties>
