--- a/pom.xml
+++ b/pom.xml
@@ -186,7 +186,7 @@ and adjust the build number accordingly -->
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.4.5-R0.3-SNAPSHOT</version>
+            <version>1.5.1-R0.1</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
