--- a/pom.xml
+++ b/pom.xml
@@ -198,6 +198,12 @@ and adjust the build number accordingly -->
             <version>1.3-SNAPSHOT</version>
             <type>jar</type>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.bukkit</groupId>
+                    <artifactId>bukkit</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!-- End of PluginBase Dependency -->
         <!-- Start of Multiverse-Adventure Dependency -->
