--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
 
     <repositories>
         <repository>
-            <id>bukkit</id>
-            <url>http://repo.bukkit.org/content/groups/public/</url>
+            <id>spigot</id>
+            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
         </repository>
         <repository>
             <id>onarandombox</id>
@@ -186,16 +186,16 @@ and adjust the build number accordingly -->
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.5.1-R0.1</version>
+            <version>1.8.7-R0.1-SNAPSHOT</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
         <!-- Bukkit Dependency -->
         <!-- Start of PluginBase Dependency -->
         <dependency>
-            <groupId>com.dumptruckman.minecraft</groupId>
-            <artifactId>BukkitPlugin</artifactId>
-            <version>1.3-SNAPSHOT</version>
+            <groupId>com.dumptruckman.minecraft.pluginbase</groupId>
+            <artifactId>Plugin-Bukkit</artifactId>
+            <version>1.5-SNAPSHOT</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
